--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- menu inicio -->
         <div class="header">
             <div id="menu">
-                <a href="http://www.proflobo.com.br/"><img class="logo" src="imagens/favicon.png" width="100" height="100" /></a>
+                <a href="http://alunos.proflobo.com.br/"><img class="logo" src="imagens/favicon.png" width="100" height="100" /></a>
                 <h1 id="textLogo" class="TextLogo">Bliblioteca Online</h1>
                 <ul class="navbar">
                     <li><a href="index.html">Home</a></li>
